# wxOCVWarp

./: CMakeLists.txt  LICENSE  README.md  hello.cpp
.github/workflows/: cmake-nix.yml  cmake-windows-precompiledwx  cmake-windows-precompiledwx.yml  cmake-windows.yml
appdir/: OCVWarp.desktop
